# AMIGA

./: .gitignore  CITATION.cff  README.md  pyproject.toml
amiga/: __init__.py  cli.py  utils.py
amiga/analysis/: __init__.py  cv_reports.py  stat_tests.py
amiga/core/: main.py
amiga/features/: expression.py  grn.py
amiga/selection/: learn2rank.py
docs/: experiments.md
docs/experiments/: design.md
docs/experiments/cases/: BIO-INSIGHT.json  MO-GENECI.json
docs/experiments/contracts/: BIO-INSIGHT_case_manifest.json  BIO-INSIGHT_data_manifest.json  BIO-INSIGHT_feature_columns.json  BIO-INSIGHT_validation_report.json  MO-GENECI_case_manifest.json  MO-GENECI_data_manifest.json  MO-GENECI_feature_columns.json  MO-GENECI_validation_report.json
docs/experiments/splits/: BIO-INSIGHT_split_assignments.csv  BIO-INSIGHT_split_manifest.json  MO-GENECI_split_assignments.csv  MO-GENECI_split_manifest.json
scripts/experiments/: amiga-exp  create_split_manifest.py  inspect_case.py  validate_case_contract.py
scripts/experiments/amiga_exp/: __init__.py  cli.py  config_selection.py  context.py  decision_baselines.py  evaluation.py  manifests.py  paper_summary.py  plots.py  primary_rank_table.py  real_world_validation.py  reports.py
scripts/experiments/amiga_exp/phases/: __init__.py  phase_01_model_screening.py  phase_02_final_test.py  phase_02_hyperparameter_tuning.py  phase_03_ablation.py  phase_04_decision_baselines.py
tests/: conftest.py  test_analysis_cv_reports.py  test_analysis_stat_tests.py  test_cli_smoke.py  test_core_main.py  test_experiment_cli.py  test_experiment_config_selection.py  test_experiment_context.py  test_experiment_decision_baselines.py  test_experiment_evaluation.py  test_experiment_legacy_cleanup.py  test_experiment_manifests.py  test_experiment_plots.py  test_experiment_primary_rank_table.py  test_experiment_reports.py  test_features_and_utils.py  test_package_metadata.py  test_paper_summary.py  test_phase_ablation.py  test_phase_decision_baselines.py  test_phase_final_test.py  test_phase_hyperparameter_tuning.py  test_phase_model_screening.py  test_real_world_validation.py  test_selection_learn2rank.py
