[tool.poetry]
name = "amiga"
version = "0.1.0"
description = "AMIGA: Autonomous Multi-objective Individual GRN Autoselection"
authors = ["Adrián Segura-Ortiz <adrianseor.99@uma.es>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "amiga" }]

[tool.poetry.scripts]
amiga = "amiga.cli:app"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"   # por NetworkX 3.5
catboost = "==1.2.8"
lightgbm = "==4.6.0"
networkx = "==3.5"
scikit-learn = "==1.7.2"
scipy = "==1.16.2"
xgboost = "==3.0.5"
python-louvain = "==0.16"
typer = "==0.19.2"


[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
